[package]
name = "postgres-db-test-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
tokio-postgres = "0.7.7"
deadpool-postgres = "0.10.5"
rand = "0.8.5"
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread"] }
